<resources>
    <string name="app_name">weatherApp</string>

<!--    название городов -->
    <string name="almaty">Алматы</string>
    <string name="nursultan">Нур-Султан</string>
    <string name="shymkent">Шымкент</string>
    <string name="aktobe">Актобе</string>
    <string name="karaganda">Караганда</string>
    <string name="taraz">Тараз</string>
    <string name="pavlodar">Павлодар</string>
    <string name="ustkamenogorsk">Усть-Каменогорск</string>
    <string name="semey">Семей</string>

<!--   дни недели -->
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>

    <string name="t1">0</string>
    <string name="t2">-2</string>
    <string name="t3">5</string>
    <string name="t4">-8</string>
    <string name="t5">10</string>
    <string name="t6">24</string>
    <string name="t7">15</string>
</resources>