<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="@dimen/sizeItemText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:srcCompat="@drawable/image_part_001" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:text="@string/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeItemText"/>

            <TextView
                android:layout_weight="0.5"
                android:text="@string/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeItemText"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:text="@string/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeItemText"/>

            <TextView
                android:layout_weight="0.5"
                android:text="@string/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeItemText"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_weight="0.5"
                android:text="@string/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeItemText"/>

            <TextView
                android:layout_weight="0.5"
                android:text="@string/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sizeItemText"/>
        </TableRow>
    </TableLayout>



</LinearLayout>